--- a/css/stile.css
+++ b/css/stile.css
@@ -3,6 +3,13 @@
     padding: 0;
 }
 
+/* caratteristiche generiche */
+
+h4{
+    color: #8e8e8e;
+    font-size: 20px;
+}
+
 /* intestazione superiore */
 .intestazione{
     height: 100px;
@@ -27,9 +34,39 @@
     color: black;
     font-size: 40px;
 }
-.titolo h4{
-    font-size: 20px;
-}
+
 .titolo h4 b{
     color: #5ac3ce;
 }
+
+/* footer */
+
+footer{
+    margin-top: 20px;
+}
+footer div{
+    margin-top: 10px;
+    height: 200px;
+    width: 250px;
+    background-color: #4ea1ff;
+    background-size: cover;
+
+
+}
+
+footer p {
+    padding-top: 10px;
+    padding-left: 5px;
+    font-size: 20px;
+    color: white;
+    font-weight: bolder;
+
+}
+#articolo1{
+    background-image:url(../img/monitor.jpg);
+}
+#articolo2{
+    background-image:url(../img/graph.jpg);
+}
+
+
